--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -38,6 +38,18 @@
 
   &__img {
     width: 100%;
+
+    &--height {
+      height: 210px;
+
+      @include onTablet {
+        height: 390px;
+      }
+
+      @include onDesktop {
+        height: 550px;
+      }
+    }
   }
 
   &__content {
@@ -109,11 +121,18 @@
 
   &__lecture {
     margin: 0 auto;
-    max-width: 1280px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @include onTablet {
+      padding: 0 34px;
+    }
+
+    @include onDesktop {
+      padding: 0;
+    }
   }
 
   &__lecture-content {
@@ -143,15 +162,4 @@
     }
   }
 
-  &__img--height {
-    height: 210px;
-
-    @include onTablet {
-      height: 390px;
-    }
-
-    @include onDesktop {
-      height: 550px;
-    }
-  }
 }
