--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -59,7 +59,7 @@
     width: 100vw;
     height: 300px;
     background-image: url("/images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg");
-    background-position: center;
+    background-position-x: 0;
     background-size: cover;
 
     @include onTablet {
@@ -96,7 +96,6 @@
     color: $font-color-main;
     text-decoration: none;
     text-transform: uppercase;
-    box-sizing: border-box;
     display: flex;
     text-align: center;
     border: 1px solid $accent-color;
