--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@ html {
   scroll-behavior: smooth;
 
   &__body {
+    box-sizing: border-box;
     width: 100%;
     background: #fff;
     margin: 0;
