--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,5 +1,4 @@
 .subscription {
-  max-width: 1280px;
   margin: 0 auto;
   background-image: url("../images/subs.jpg");
   background-size: contain;
@@ -61,8 +60,8 @@
     box-sizing: border-box;
     display: flex;
     text-align: center;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 
     @include onTablet {
       width: 460px;
@@ -78,10 +77,13 @@
       gap: 30px;
     }
 
+    &-label {
+      width: 100%;
+    }
+
     &-left {
+      width: 100%;
       box-sizing: border-box;
-      min-width: 210px;
-      // width: 100%;
       font-weight: 500;
       font-size: 16px;
       color: $font-color-main;
@@ -106,17 +108,19 @@
     }
 
     &-right {
-      width: 50px;
+      flex-shrink: 0;
+      flex-basis: 50px;
       height: 50px;
       background-color: #f14a27;
       background-image: url("../images/btn-arrow.svg");
       background-position: center;
       background-repeat: no-repeat;
+      cursor: pointer;
 
       @include hover(background-color, #ec8570);
 
       @include onTablet {
-        width: 70px;
+        flex-basis: 70px;
         height: 70px;
       }
     }
