--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -144,11 +144,13 @@
       border-left: 1px solid #8dada6;
       padding-top: 0;
       padding-left: 65px;
-      gap: 50px;
+      row-gap: 20px;
+      column-gap: 90px;
     }
   }
 
   &__link {
+    width: max-content;
     text-decoration: none;
     font-size: 14px;
     color: $font-color-main;
