add last part of landing

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -8,6 +8,11 @@
     @include contentPaddingInLine;
     padding-top: 27px;
     background-color: #1a5a4c;
+
+    @include onTablet {
+      display: flex;
+      padding-top: 40px;
+    }
   }
 
   &__close {
@@ -28,6 +33,16 @@
     height: 1px;
     background: rgba(255, 255, 255, 0.5);
     margin-bottom: 24px;
+
+    @include onTablet {
+      width: 1px;
+      height: 145px;
+      margin-inline: 38px;
+    }
+
+    @include onDesktop {
+      margin-inline: 102px;
+    }
   }
 
   &__text {
@@ -57,9 +72,20 @@
 
   &__graph {
     margin-bottom: 16px;
+
+    @include onTablet {
+      width: 158px;
+      margin-right: 35px;
+    }
   }
 
   &__last {
+
+    @include onTablet {
+      width: 144px;
+      margin-top: 40px;
+
+    }
     padding-bottom: 27px ;
   }
 }
