--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -5,6 +5,18 @@
     @include onTablet {
       @include pageGrid;
     }
+
+    &__container {
+      @include onTablet {
+        grid-column: 1 / 5;
+      }
+
+      @include onDesktop {
+        margin-top: 163px;
+        grid-row: 1;
+        grid-column: 9 / -1;
+      }
+    }
   }
 
   &__photo {
@@ -16,6 +28,11 @@
     @include onTablet {
       grid-column: 1 / -1;
       margin-bottom: 44px;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 8;
+      margin-bottom: 104px;
     }
   }
 
