--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -21,6 +21,10 @@
     @include onTablet {
       text-align: left;
     }
+
+    @include onDesktop {
+      font-size: 48px;
+    }
   }
 
   &__photo {
@@ -34,6 +38,11 @@
       height: 543px;
     }
 
+    @include onDesktop {
+      margin-bottom: 30px;
+      grid-column: 1 / 5;
+    }
+
     &__2 {
       display: none;
 
@@ -41,6 +50,40 @@
         display: block;
 
         grid-column: 4 / -1;
+      }
+
+      @include onDesktop {
+        display: none;
+      }
+    }
+
+    &__3 {
+      display: none;
+
+      @include onDesktop {
+        display: block;
+        grid-column: 5 / -1;
+      }
+    }
+
+    &__4 {
+      display: none;
+
+      @include onDesktop {
+        display: block;
+        grid-column: 1 / 9;
+        height: 360px;
+      }
+    }
+
+    &__5 {
+      display: none;
+
+      @include onDesktop {
+        display: block;
+        height: 360px;
+        grid-column: 9 / -1;
+        margin-bottom: 200px;
       }
     }
   }
@@ -52,6 +95,10 @@
 
     margin-bottom: 100px;
     grid-column: 1 / -1;
+
+    @include onDesktop {
+      display: none;
+    }
   }
 
   &__slider {
@@ -59,5 +106,9 @@
     height: 9px;
 
     text-align: center;
+
+    @include onDesktop {
+      display: none;
+    }
   }
 }
