--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -8,6 +8,14 @@
       padding-inline: 0;
       padding-left: 32px;
     }
+
+    @include onDesktop {
+      margin-left: auto;
+    }
+
+    @include onBigScreen {
+      padding: 0;
+    }
   }
 
   &__menu {
@@ -21,10 +29,15 @@
       margin-bottom: 64px;
       display: block;
     }
+
+    @include onDesktop {
+      margin-bottom: 143px;
+    }
   }
 
   &__container {
-
+    max-width: 1280px;
+    margin-inline: auto;
     @include onTablet {
       @include pageGrid;
     }
@@ -45,6 +58,10 @@
       font-size: 54px;
       line-height: 120%;
       text-align: left;
+    }
+
+    @include onDesktop {
+      font-size: 72px;
     }
   }
 
@@ -75,6 +92,11 @@
         margin-bottom: 107px;
         margin-top: 38px;
         width: 270px;
+      }
+
+      @include onDesktop {
+        margin-top: 89px;
+        margin-left: auto;
       }
     }
 
@@ -119,6 +141,16 @@
       padding-left: 34px;
       font-size: 48px;
       margin-bottom: 48px;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 6;
+      margin-bottom: 56px;
+    }
+
+    @include onBigScreen {
+      width: 470px;
+      padding: 0;
     }
   }
 }
