--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -12,17 +12,29 @@
     height: 390px;
   }
 
+  @include onDesktop {
+    height: 550px;
+    @include pageGrid;
+  }
+
   &__container {
     background: #fff;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
     margin-inline: 20px;
-
     position: absolute;
     top: 153px;
 
     @include forLection {
       top: 306px;
       margin-inline: 65px;
+    }
+
+    @include onDesktop {
+      top: 448px;
+      height: 204px;
+      position: relative;
+      grid-column: 4 / 10;
+      margin-inline: 0;
     }
 
     &__date {
@@ -35,6 +47,11 @@
 
       @include forLection {
         margin-inline: 55px;
+      }
+
+      @include onDesktop {
+        padding-top: 45px;
+        margin-inline: 100px;
       }
     }
   }
@@ -80,6 +97,10 @@
 
     @include onTablet {
       font-size: 36px;
+    }
+
+    @include onDesktop {
+      margin-inline: 100px;
     }
   }
 }
