--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -4,6 +4,14 @@
   gap: 28px;
   height: 72px;
 
+  @include onTablet {
+    margin-left: 38px;
+
+    @include onDesktop {
+      margin-left: 102px;
+    }
+  }
+
   &__item {
     display: flex;
     flex-direction: column;
