--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -23,6 +23,12 @@
   }
 }
 
+@mixin onBigScreen {
+  @media (min-width: 1330px) {
+    @content;
+  }
+}
+
 @mixin contentPaddingInLine () {
   padding-inline: 20px;
 
@@ -32,8 +38,7 @@
 
   @include onDesktop {
     margin-inline: auto;
-    max-width: 1020px;
-    padding-inline: 120px;
+    max-width: 1280px;
   }
 }
 
