--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -10,6 +10,14 @@
 
     align-items: center;
     justify-content: space-between;
+
+    @include onTablet {
+      flex-direction: column;
+      grid-column: 1 / 2;
+      justify-content: flex-start;
+      gap: 62px;
+      margin-top: 51px;
+    }
   }
 
   &__container {
@@ -54,12 +62,31 @@
 
   &__graphic {
 
+    @include onTablet {
+      margin-top: 51px;
+      grid-column: 2 / 4;
+    }
+
+    @include onDesktop {
+      grid-column: 3 / 5;
+      margin-bottom: 87px;
+    }
+
     &__time {
       margin-top: 20px;
     }
   }
 
   &__contacts {
+
+    @include onTablet {
+      grid-column: 4 / 6;
+      margin-top: 51px;
+    }
+
+    @include onDesktop {
+      grid-column: 5 / 7;
+    }
 
     &__link {
       text-decoration: none;
@@ -90,6 +117,10 @@
     align-items: center;
     justify-content: center;
 
+    @include onTablet {
+      display: none;
+    }
+
     &__container {
       grid-column: 1 / -1;
 
@@ -113,19 +144,53 @@
     background: rgba(26, 90, 76, 0.5);
     width: 100%;
     margin-bottom: 40px;
+
+    @include onTablet {
+      grid-column: 2 / 6;
+      margin-block: 64px;
+    }
+
+    @include onDesktop {
+      width: 1px;
+      height: 260px;
+      margin: 0;
+      margin-inline: 35px;
+      margin-top: 48px;
+
+      grid-row: 1;
+      grid-column: 7 / 8;
+    }
   }
 
   &__nav {
     grid-column: 1 / -1;
 
+    @include onTablet {
+      grid-column: 2 / 6;
+      margin-bottom: 120px;
+    }
+
+    @include onDesktop {
+      margin-top: 48px;
+      grid-row: 1;
+      grid-column: 8 / 12;
+    }
+
     display: flex;
     gap: 20px;
     margin-bottom: 80px;
+
+    @include onTablet {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+    }
 
     &__list {
       margin: 0;
       padding: 0;
       list-style: none;
+
+      grid-column: span 2;
     }
 
     &__item {
@@ -153,6 +218,13 @@
     flex-direction: column;
     gap: 10px;
     margin-bottom: 50px;
+
+    @include onTablet {
+      gap: 0;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 36px;
+    }
 
     &__text {
       margin: 0;
