--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,12 +1,31 @@
 .subscribe {
   background-image: url(images/backgroud--footer.png);
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
 
   width: 100%;
   height: 386px;
 
+  @include onDesktop {
+    height: 550px;
+    background-image: url(images/backgroud--footer__1.png);
+  }
+
+  @include onTablet {
+    @include pageGrid;
+  }
+
   &__container {
     @include contentPaddingInLine;
+    grid-column: 2 / 6;
+
+    @include onTablet {
+      padding-inline: 0;
+    }
+
+    @include onDesktop {
+      grid-column: 4 / 10;
+    }
   }
 
   &__title {
@@ -21,6 +40,14 @@
     font-style: normal;
     font-weight: 700;
     line-height: 100%; /* 36px */
+
+    @include onTablet {
+      font-size: 48px;
+    }
+
+    @include onDesktop {
+      padding-top: 163px;
+    }
   }
 
   &__text {
@@ -42,15 +69,32 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 88px;
+
+    @include onTablet {
+      background: inherit;
+    }
+
+    @include onDesktop {
+      gap: 30px;
+    }
   }
 
   &__form {
     width: 71%;
+    padding-left: 20px;
+    background: #fff;
+
+    @include onTablet {
+      width: 74%;
+    }
+
+    @include onDesktop {
+      width: 430px;
+    }
   }
 
   &__email {
     padding: 0;
-    padding-left: 20px;
     height: 50px;
     width: 100%;
 
@@ -66,6 +110,10 @@
 
     &:-webkit-autofill {
       background-color: #fff;
+    }
+
+    @include onTablet {
+      height: 70px;
     }
   }
 
@@ -86,6 +134,11 @@
       width: 24px;
 
       background-image: url(images/arrow__sub.svg);
+    }
+
+    @include onTablet {
+      height: 70px;
+      width: 70px;
     }
   }
 }
