--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -20,6 +20,12 @@
     height: 384px;
   }
 
+  @include onDesktop {
+    height: 655px;
+    grid-column: 6 / -1;
+    margin-bottom: 200px;
+  }
+
   &__menu {
     display: block;
     width: 24px;
