add fix to navigation

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -19,8 +19,13 @@
     display: block;
     height: 24px;
     width: 24px;
+    transition-duration: 0.3s;
 
     background-image: url(images/close-icon.svg);
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__top {
