--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,6 +2,16 @@
   @include pageGrid;
   @include contentPaddingInLine;
 
+  &__logo {
+    display: block;
+    cursor: pointer;
+    transition-duration: 0.5s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
   &__top {
     grid-column: 1 / -1;
     margin-top: 50px;
