--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -23,6 +23,11 @@
     width: 24px;
     height: 24px;
     background-image: url(images/menu-icon.svg);
+    transition-duration: 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     @include onTablet {
       margin-top: 39px;
@@ -76,6 +81,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 100%; /* 16px */
+    cursor: pointer;
 
     @include onTablet {
       height: 70px;
@@ -104,6 +110,7 @@
       width: 18%;
       border: none;
       background: #1a5a4c;
+      cursor: pointer;
 
       display: flex;
       align-items: center;
