--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -68,6 +68,11 @@
       left: 0;
       transform: none;
     }
+
+    @include onDesktop {
+      width: 170px;
+      height: 72px;
+    }
   }
 
   &__container {
