--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -63,15 +63,12 @@
     line-height: 150%; /* 27px */
   }
 
-  &__box {
-    background: #fff;
-
+  &__form {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 88px;
 
     @include onTablet {
-      background: inherit;
+      gap: 16px;
     }
 
     @include onDesktop {
@@ -79,24 +76,11 @@
     }
   }
 
-  &__form {
-    width: 71%;
-    padding-left: 20px;
-    background: #fff;
-
-    @include onTablet {
-      width: 74%;
-    }
-
-    @include onDesktop {
-      width: 430px;
-    }
-  }
-
   &__email {
     padding: 0;
+    padding-left: 20px;
     height: 50px;
-    width: 100%;
+    width: 80%;
 
     color: #687480;
     font-family: "Montserrat", sans-serif;
@@ -121,6 +105,7 @@
     padding: 0;
     height: 50px;
     width: 20%;
+    cursor: pointer;
 
     border: none;
     background: #f14a27;
