delete max-width of header

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -10,11 +10,7 @@
     }
 
     @include onDesktop {
-      margin-left: auto;
-    }
-
-    @include onBigScreen {
-      padding: 0;
+      margin-inline: auto;
     }
   }
 
@@ -41,7 +37,6 @@
   }
 
   &__container {
-    max-width: 1280px;
     margin-inline: auto;
     @include onTablet {
       @include pageGrid;
@@ -157,7 +152,6 @@
 
     @include onBigScreen {
       width: 470px;
-      padding: 0;
     }
   }
 }
