--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -138,4 +138,29 @@
       margin-bottom: 64px;
     }
   }
+
+  &__second__title {
+    margin: 0;
+    margin-bottom: 40px;
+
+    color: #0f0e08;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%; /* 36px */
+
+    @include onTablet {
+      grid-column: 1 / -1;
+      text-align: left;
+      font-size: 48px;
+      margin-bottom: 48px;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 6;
+      margin-bottom: 56px;
+    }
+  }
 }
