--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -35,5 +35,9 @@
     font-style: normal;
     font-weight: 500;
     line-height: 100%; /* 16px */
+
+    @include onDesktop {
+      font-size: 22px;
+    }
   }
 }
