--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -43,9 +43,14 @@
     }
 
     &__line {
+      display: none;
       width: 1px;
       height: 70px;
       background: #1a5a4c;
+
+      @include onDesktop {
+        display: block;
+      }
     }
   }
 
