Changes were made

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,13 +1,15 @@
 .container {
   margin: 0 auto;
-  max-width: 1170px;
+  max-width: 100%;
   padding: 0 20px;
 
   @include onTablet {
+    margin: 0;
     padding: 0 40px;
   }
 
   @include onDesktop {
+    margin: 0;
     padding: 0 50px;
   }
 
@@ -18,27 +20,19 @@
   &--menu {
     background-color: $colorGreen;
     max-width: none;
+    padding-bottom: 20px;
   }
-
-  // &--lection {
-  //   background-image: url(../images/3.jpg);
-  //   background-repeat: no-repeat;
-  //   background-position: center;
-  //   background-size: contain;
-  //   height: 210px;
-  //   width: 100%;
-
-  //   @include onTablet {
-  //     height: 390px;
-  //   }
-
-  //   @include onDesktop {
-  //     height: 550px;
-  //   }
-  // }
 
   &--last {
     margin: 0;
     padding: 0;
+  }
+
+  &--lection {
+    padding: 0;
+  }
+
+  &--gallery {
+    width: 1136px;
   }
 }
