--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -41,6 +41,10 @@
   &__icon--inst {
     width: 24px;
     height: 24px;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__icon-container {
