--- a/src/styles/blocks/last.scss
+++ b/src/styles/blocks/last.scss
@@ -89,6 +89,10 @@
         height: 70px;
         line-height: 70px;
       }
+
+      &:hover {
+        background-color: $colorWhite;
+      }
     }
   }
 }
