--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -5,14 +5,27 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 200px;
+  }
+
+  &__container--1 {
+    margin-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     gap: 30px;
-    margin-bottom: 200px;
-    padding: 10px;
+  }
+
+  &__container--2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
   }
 
   &__painting--1 {
-    width: 370px;
+    width: 460px;
     height: 600px;
 
     transition: transform 0.3s;
@@ -23,7 +36,7 @@
   }
 
   &__painting--2 {
-    width: 770px;
+    width: 900px;
     height: 600px;
 
     transition: transform 0.3s;
@@ -34,7 +47,7 @@
   }
 
   &__painting--3 {
-    width: 770px;
+    width: 900px;
     height: 360px;
 
     transition: transform 0.3s;
@@ -45,7 +58,7 @@
   }
 
   &__painting--4 {
-    width: 370px;
+    width: 460px;
     height: 360px;
 
     transition: transform 0.3s;
