--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -4,6 +4,10 @@
   width: 100%;
   background: rgba(24,24,26,0.5);
 
+  &__box {
+    background: #1a5a4c;
+  }
+
   &__container {
     @include contentPaddingInLine;
     padding-top: 27px;
