--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -14,10 +14,11 @@
     }
 
     &__box {
-      width: 43px;
+      width: 30px;
       position: relative;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
       gap: 34px;
     }
@@ -35,6 +36,7 @@
       font-style: normal;
       font-weight: 700;
       line-height: 100%; /* 14px */
+      text-decoration: none;
 
       @include onDesktop {
         transform: rotate(-90deg);
@@ -135,6 +137,7 @@
       display: flex;
       margin-top: 20px;
       margin-bottom: 70px;
+      transition-duration: 0.5s;
 
       @include onTablet {
         margin-bottom: 107px;
@@ -146,6 +149,10 @@
         margin-top: 89px;
         margin-left: auto;
         margin-bottom: 0;
+      }
+
+      &:hover {
+        transform: scale(1.1);
       }
     }
 
