--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -28,6 +28,7 @@
 
   &__link {
     text-decoration: none;
+    transition-duration: 0.5s;
 
     color: #fff;
     font-family: "IBM Plex Sans", sans-serif;
@@ -38,6 +39,10 @@
 
     @include onDesktop {
       font-size: 22px;
+    }
+
+    &:hover {
+      color: #000;
     }
   }
 }
