--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -99,6 +99,10 @@
     @include onTablet {
       height: 70px;
     }
+
+    @include onDesktop {
+      width: 470px;
+    }
   }
 
   &__button {
@@ -106,12 +110,17 @@
     height: 50px;
     width: 20%;
     cursor: pointer;
+    transition-duration: 0.5s;
 
     border: none;
     background: #f14a27;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     &__icon {
       display: block;
