--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -39,6 +39,11 @@
     display: block;
     width: 24px;
     height: 24px;
+    transition-duration: 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     &__facebook {
       background-image: url(images/facebook.svg);
@@ -108,6 +113,9 @@
       font-weight: 400;
       line-height: 150%; /* 21px */
 
+      &:hover {
+        text-decoration: underline;
+      }
     }
 
     &__container {
@@ -211,6 +219,7 @@
 
     &__link {
       text-decoration: none;
+      transition-duration: 0.3s;
 
       color: #0f0e08;
       font-family: "IBM Plex Sans", sans-serif;
@@ -219,6 +228,10 @@
       font-weight: 400;
       line-height: 100%; /* 14px */
       width: 130px;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
