Changes were made

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -9,9 +9,19 @@
 
   &--menu {
     background-image: url(../images/Menu.svg);
+    transition: all 300ms;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &--cross {
     background-image: url(../images/cross.svg);
+    transition: all 300ms;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
