--- a/src/styles/blocks/last.scss
+++ b/src/styles/blocks/last.scss
@@ -49,7 +49,7 @@
       font-family: "Montserrat", sans-serif;
       font-size: 14px;
       line-height: 100%;
-      color: #687480;
+      color: $colorBlack;
       outline: none;
 
       @include onDesktop {
