--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -81,6 +81,11 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
+    transition: all 300ms;
+
+    &:hover {
+      color: $colorOrange;
+    }
   }
 
   &__border {
