Changes in gallery

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -9,62 +9,83 @@
     margin-bottom: 200px;
   }
 
-  &__container--1 {
-    margin-bottom: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 30px;
-  }
-
-  &__container--2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 30px;
-  }
-
   &__painting--1 {
-    width: 460px;
-    height: 600px;
+    width: fit-content;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    object-fit: cover;
+    object-position: left;
 
     transition: transform 0.3s;
 
     &:hover {
       transform: scale(1.05);
+    }
+
+    @include onDesktop {
+      width: fit-content;
+      margin-right: 30px;
+      margin-bottom: 30px;
+      object-fit: cover;
+      object-position: left;
     }
   }
 
   &__painting--2 {
-    width: 900px;
-    height: 600px;
+    width: fit-content;
+    margin-bottom: 30px;
+    object-fit: cover;
+    object-position: right;
 
     transition: transform 0.3s;
 
     &:hover {
       transform: scale(1.05);
+    }
+
+    @include onDesktop {
+      width: fit-content;
+      margin-bottom: 30px;
+      object-fit: cover;
+      object-position: right;
     }
   }
 
   &__painting--3 {
-    width: 900px;
-    height: 360px;
+    width: fit-content;
+    margin-right: 30px;
+    object-fit: cover;
+    object-position: left;
 
     transition: transform 0.3s;
 
     &:hover {
       transform: scale(1.05);
     }
+
+    @include onDesktop {
+      width: fit-content;
+      margin-right: 30px;
+      object-fit: cover;
+      object-position: left;
+    }
   }
 
   &__painting--4 {
-    width: 460px;
-    height: 360px;
+    width: fit-content;
+    object-fit: cover;
+    object-position: right;
 
     transition: transform 0.3s;
 
     &:hover {
       transform: scale(1.05);
+    }
+
+    @include onDesktop {
+      width: fit-content;
+      object-fit: cover;
+      object-position: right;
     }
   }
 }
