--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
   background-size: 100% 50%;
   background-repeat: no-repeat;
-  background-position: cover;
+  background-position: contain;
   background-image: url(../images/Header.jpg);
   font-family: "Montserrat", sans-serif;
 
