--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,4 @@
-@import '_utils';
+@import "_utils";
 
 * {
   margin: 0;
@@ -15,11 +15,6 @@
 a {
   color: var(--color-black);
   text-decoration: none;
-}
-
-input,
-textarea:focus-visible {
-  outline: none;
 }
 
 img,
@@ -48,11 +43,27 @@ button {
   font-family: var(--font-main);
 }
 
+input,
+textarea:focus-visible {
+  outline: none;
+}
+
 html {
   position: relative;
   width: 100%;
   font-family: var(--font-main);
   color: var(--color-black);
+}
+
+.loader {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-white);
+  transition: opacity var(--time-6), visibility var(--time-6);
 }
 
 body {
@@ -78,17 +89,6 @@ main {
   position: relative;
   flex: 1;
   width: 100%;
-}
-
-.loader {
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--color-white);
-  transition: opacity var(--time-6), visibility var(--time-6);
 }
 
 .section {
