--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -3,5 +3,5 @@
   --color-white: #fff;
   --time-3: 0.3s;
   --time-6: 0.6s;
-  --font-main: 'Roboto', 'Arial', sans-serif;
+  --font-main: "Roboto", "Arial", sans-serif;
 }
