--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,3 @@
-@import 'utils/variable';
-@import 'utils/fonts';
-@import 'utils/mixins';
+@import "utils/variable";
+@import "utils/fonts";
+@import "utils/mixins";
