--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "utils";
-@import "fonts";
 @import "typography";
+@import "../styles/blocks/header.scss";
+@import "../styles/blocks/page.scss";
+@import "../styles/blocks/icons.scss";
+@import "../styles/blocks/menu.scss";
+@import "../styles/blocks/nav.scss";
+@import "../styles/blocks/schedule.scss";
+@import "../styles/blocks/events.scss";
+@import "../styles/blocks/exhibition.scss";
+@import "../styles/blocks/lecture.scss";
+@import "../styles/blocks/subscription.scss";
+@import "../styles/blocks/footer.scss";
+@import "../styles/blocks/contacts.scss";
+@import "../styles/blocks/gallery.scss";
+@import "../styles/blocks/square-button.scss";
 
-body {
-  background: $c-gray;
-}
