--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$c-gray: #687480;
+
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+
+$effect-duration: 0.3s;
+
+$main-black: #0f0e08;
+$dark-green: #1a5a4c;
