--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -1,7 +1,12 @@
 :root {
-  --color-black: #000;
   --color-white: #fff;
+  --color-black: #0f0e08;
+  --color-grey: #687480;
+  --color-grey-2: #4e4e4e;
+  --color-green: #1a5a4c;
+  --color-orange: #f14a27;
   --time-3: 0.3s;
   --time-6: 0.6s;
-  --font-main: "Roboto", "Arial", sans-serif;
+  --font-main: "IBM Plex Sans", sans-serif;
+  --font-title: "Montserrat", sans-serif;
 }
