--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,4 @@
-@import "_utils";
+@import "utils/index";
 
 * {
   margin: 0;
@@ -44,7 +44,8 @@ button {
 }
 
 input,
-textarea:focus-visible {
+textarea:focus-visible,
+button:focus-visible {
   outline: none;
 }
 
@@ -98,7 +99,260 @@ main {
   &__container {
     width: 100%;
     max-width: 1200px;
-    padding: 0 20px;
+    padding: 0 15px;
     margin: 0 auto;
+
+    @include max-tablet {
+      padding: 0 34px;
+    }
+
+    @include max-phone {
+      padding: 0 20px;
+    }
+  }
+}
+
+h1,
+h2,
+h3,
+h4 {
+  position: relative;
+  width: 100%;
+  font-family: var(--font-title);
+  font-weight: 700;
+  line-height: 1em;
+}
+
+h1 {
+  font-size: 72px;
+  line-height: 1.2em;
+  text-transform: uppercase;
+
+  @include max-tablet {
+    font-size: 54px;
+  }
+
+  @include max-phone {
+    font-size: 45px;
+  }
+}
+
+h2 {
+  font-size: 48px;
+
+  @include max-phone {
+    font-size: 36px;
+  }
+}
+
+h3 {
+  font-size: 36px;
+  font-weight: 400;
+
+  @include max-phone {
+    font-size: 28px;
+  }
+}
+
+.text {
+  position: relative;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5em;
+  color: var(--color-grey-2);
+
+  &--size-2 {
+    font-size: 16px;
+    font-weight: 300;
+  }
+
+  &--size-3 {
+    font-size: 14px;
+  }
+
+  &--size-4 {
+    font-size: 12px;
+    font-weight: 300;
+  }
+
+  &--color-white {
+    color: var(--color-white);
+  }
+
+  &--color-black {
+    color: var(--color-black);
+  }
+
+  span {
+    font-weight: 600;
+  }
+}
+
+.btn {
+  position: relative;
+  display: flex;
+  width: fit-content;
+  height: 70px;
+  border: 1px solid var(--color-green);
+
+  &:hover {
+    .btn__text {
+      color: var(--color-white);
+
+      &::before {
+        width: 100%;
+      }
+    }
+  }
+
+  @include max-phone {
+    width: 100%;
+    height: 50px;
+  }
+
+  &__text {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1em;
+    color: var(--color-black);
+    text-transform: uppercase;
+    padding: 0 68px;
+    transition: color var(--time-3);
+
+    &::before {
+      position: absolute;
+      content: "";
+      z-index: -1;
+      top: 0;
+      right: 0;
+      width: 0;
+      height: 100%;
+      background-color: var(--color-green);
+      transition: width var(--time-6);
+    }
+
+    @include max-phone {
+      width: 100%;
+    }
+  }
+
+  &__arrow {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70px;
+    height: 100%;
+    background-color: var(--color-green);
+
+    &::before {
+      position: absolute;
+      content: "";
+      width: 24px;
+      height: 24px;
+      background-image: url(../img/btn_arrow.svg);
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+
+    @include max-phone {
+      width: 50px;
+      min-width: 50px;
+    }
+  }
+}
+
+.form {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 570px;
+  height: 70px;
+
+  @include max-tablet {
+    max-width: 460px;
+  }
+
+  @include max-phone {
+    max-width: none;
+    height: 50px;
+  }
+
+  &__input {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    font-family: var(--font-title);
+    font-size: 14px;
+    color: var(--color-black);
+    padding: 0 32px;
+    border: none;
+    background-color: var(--color-white);
+    margin-right: 30px;
+    transition: color var(--time-3);
+
+    &::placeholder {
+      color: var(--color-grey);
+    }
+
+    &:focus {
+      &::placeholder {
+        color: var(--color-black);
+      }
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    @include max-tablet {
+      padding: 0 24px;
+      margin-right: 16px;
+    }
+
+    @include max-phone {
+      margin-right: 0;
+    }
+  }
+
+  &__submit {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70px;
+    min-width: 70px;
+    height: 100%;
+    background-color: var(--color-orange);
+    border: none;
+    transition: background-color var(--time-3);
+
+    &:hover {
+      background-color: rgba(241, 74, 39, 0.7);
+    }
+
+    &::before {
+      position: absolute;
+      content: "";
+      width: 24px;
+      height: 24px;
+      background-image: url(../img/form_arrow.svg);
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+
+    @include max-phone {
+      width: 50px;
+      min-width: 50px;
+    }
   }
 }
