--- a/src/styles/utils/fonts.scss
+++ b/src/styles/utils/fonts.scss
@@ -1,1 +1,2 @@
-// some font
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap");
