--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -25,7 +25,7 @@
     height: 210px;
     width: 100%;
     object-fit: cover;
-    transition: border-radius $transition;
+    transition: all $transition;
 
     @include onTablet {
       height: 520px;
@@ -36,6 +36,7 @@
       height: 520px;
 
       &:hover {
+        transform: scale(1.1);
         border-radius: 20%;
       }
     }
