--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -196,16 +196,6 @@ h3 {
   height: 70px;
   border: 1px solid var(--color-green);
 
-  &:hover {
-    .btn__text {
-      color: var(--color-white);
-
-      &::before {
-        width: 100%;
-      }
-    }
-  }
-
   @include max-phone {
     width: 100%;
     height: 50px;
@@ -222,7 +212,7 @@ h3 {
     line-height: 1em;
     color: var(--color-black);
     text-transform: uppercase;
-    padding: 0 68px;
+    padding: 0 66px;
     transition: color var(--time-3);
 
     &::before {
@@ -265,6 +255,16 @@ h3 {
     @include max-phone {
       width: 50px;
       min-width: 50px;
+    }
+  }
+
+  &:hover {
+    .btn__text {
+      color: var(--color-white);
+
+      &::before {
+        width: 100%;
+      }
     }
   }
 }
@@ -356,3 +356,5 @@ h3 {
     }
   }
 }
+
+@import "sections/index";
