add task solution

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -3,10 +3,6 @@
   flex-direction: column;
   align-items: center;
 
-  // @include OnDeskTop {
-  //   align-items: normal;
-  // }
-
   &__title {
     font-size: 36px;
     font-style: normal;
@@ -25,6 +21,9 @@
 
     @include OnDeskTop {
       margin: 202px 0 56px;
+      width: 1170px;
+      align-self: center;
+      text-align: unset;
     }
   }
 
@@ -193,12 +192,9 @@
     @include OnDeskTop {
       display: flex;
       align-items: center;
-      // justify-content: space-between;
       gap: 130px;
 
       margin-bottom: 104px;
-
-      // max-width: 1170px;
     }
   }
 }
