--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -6,7 +6,7 @@
 
   @include OnTablet {
     margin-top: 208px;
-    align-items: start;
+    // align-items: start;
   }
 
   @include OnDeskTop {
@@ -21,6 +21,11 @@
 
     @include OnTablet {
       font-size: 48px;
+      width: 700px;
+    }
+
+    @include OnDeskTop {
+      width: 1170px;
     }
   }
 
