--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -79,6 +79,10 @@
     width: 280px;
     height: 50px;
 
+    &:-webkit-autofill {
+      background-color: #fff;
+    }
+
     @include OnTablet {
       margin-top: 64px;
       gap: 16px;
@@ -136,6 +140,12 @@
     @include OnTablet {
       width: 70px;
       height: 70px;
+
+      transition: transform 0.5s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 }
