--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -98,10 +98,28 @@
     text-decoration: none;
     color: inherit;
     line-height: 100%;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -5px;
+      display: block;
+      width: 120px;
+      height: 1px;
+      background-color: #0f0e08;
+
+      transition: transform 0.3s;
+      transform: scale(0);
+      transform-origin: left;
+    }
+
+    &:hover::after {
+      transform: scale(1);
+    }
 
     @include OnTablet {
-      width: 220px
-      ;
+      width: 220px;
     }
   }
 
