--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -51,6 +51,10 @@
       margin-top: 89px;
       align-self: flex-end;
     }
+
+    &:hover {
+      box-shadow: 2px 2px 2px 2px rgba(26, 90, 76, 0.25);
+    }
   }
 
   &__content {
