--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,15 @@
-$c-gray: #eee;
+$main-green: #1a5a4c;
+$bg-color: #fff;
+$header-title-color: #000;
+$title-color: #0f0e08;
+$secodary-text-color: #4e4e4e;
+$event-link-color: #687480;
+
+$title-font: "Montserrat", "Roboto", sans-serif;
+$secondary-font: "IBM Plex Sans", "Roboto", sans-serif;
+
+$button-hight: 70px;
+$button-title-width: 201px;
+
+$container-padding-top: 40px;
+$container-padding-inline: 55px;
