add task solution

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -146,6 +146,15 @@
       min-width: 130px;
       max-width: 220px;
 
+      &-link {
+        text-decoration: none;
+        color: inherit;
+
+        &:hover {
+          font-style: italic;
+        }
+      }
+
       @include OnDeskTop {
         width: 170px;
       }
