--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,6 +2,8 @@
   position: relative;
 
   @include onDesktop {
+    height: 100vh;
+
     &::before {
       content: "Події";
       position: absolute;
@@ -41,7 +43,7 @@
     }
 
     @include onDesktop {
-      height: 655px;
+      height: 100vh;
       grid-column: 6 / span 7;
     }
   }
@@ -61,6 +63,7 @@
 
     @include onDesktop {
       font-size: 72px;
+      padding-top: 0;
     }
   }
 
@@ -76,7 +79,11 @@
 
     @include onDesktop {
       grid-column: 1 / span 5;
-      padding-bottom: 118px;
+      height: 100vh;
+      display: flex;
+      flex-flow: row wrap;
+      align-content: center;
+      padding-bottom: 0;
     }
   }
 
