--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -18,7 +18,6 @@
   }
 
   &--menu {
-    position: fixed;
     background: url("../images/icons/menu-icon.svg") no-repeat;
   }
 
@@ -31,5 +30,12 @@
     font-size: 30px;
     font-weight: 700;
     line-height: 100%;
+    color: $black-color;
+    text-decoration: none;
+    transition: transform $transition;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
