--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -25,6 +25,14 @@
     column-gap: 20px;
   }
 
+  &__social {
+    transition: transform $transition;
+
+    &:hover {
+      transform: scale(1.3);
+    }
+  }
+
   &__center {
     @include ff_ibm;
 
