--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -54,6 +54,7 @@ html {
   width: 100%;
   font-family: var(--font-main);
   color: var(--color-black);
+  scroll-behavior: smooth;
 }
 
 .loader {
@@ -102,20 +103,22 @@ main {
     padding: 0 15px;
     margin: 0 auto;
 
-    @include max-tablet {
+    @include max-laptop {
       padding: 0 34px;
     }
 
-    @include max-phone {
+    @include max-tablet {
       padding: 0 20px;
     }
   }
 }
 
 h1,
+.h1,
 h2,
+.h2,
 h3,
-h4 {
+.h3 {
   position: relative;
   width: 100%;
   font-family: var(--font-title);
@@ -123,33 +126,36 @@ h4 {
   line-height: 1em;
 }
 
-h1 {
+h1,
+.h1 {
   font-size: 72px;
   line-height: 1.2em;
   text-transform: uppercase;
 
-  @include max-tablet {
+  @include max-laptop {
     font-size: 54px;
   }
 
-  @include max-phone {
+  @include max-tablet {
     font-size: 45px;
   }
 }
 
-h2 {
+h2,
+.h2 {
   font-size: 48px;
 
-  @include max-phone {
+  @include max-tablet {
     font-size: 36px;
   }
 }
 
-h3 {
+h3,
+.h3 {
   font-size: 36px;
   font-weight: 400;
 
-  @include max-phone {
+  @include max-tablet {
     font-size: 28px;
   }
 }
@@ -196,7 +202,7 @@ h3 {
   height: 70px;
   border: 1px solid var(--color-green);
 
-  @include max-phone {
+  @include max-tablet {
     width: 100%;
     height: 50px;
   }
@@ -227,7 +233,7 @@ h3 {
       transition: width var(--time-6);
     }
 
-    @include max-phone {
+    @include max-tablet {
       width: 100%;
     }
   }
@@ -252,7 +258,7 @@ h3 {
       background-size: contain;
     }
 
-    @include max-phone {
+    @include max-tablet {
       width: 50px;
       min-width: 50px;
     }
@@ -277,11 +283,11 @@ h3 {
   max-width: 570px;
   height: 70px;
 
-  @include max-tablet {
+  @include max-laptop {
     max-width: 460px;
   }
 
-  @include max-phone {
+  @include max-tablet {
     max-width: none;
     height: 50px;
   }
@@ -313,12 +319,12 @@ h3 {
       margin-right: 0;
     }
 
-    @include max-tablet {
+    @include max-laptop {
       padding: 0 24px;
       margin-right: 16px;
     }
 
-    @include max-phone {
+    @include max-tablet {
       margin-right: 0;
     }
   }
@@ -350,7 +356,7 @@ h3 {
       background-size: contain;
     }
 
-    @include max-phone {
+    @include max-tablet {
       width: 50px;
       min-width: 50px;
     }
