--- a/src/styles/sections/banner.scss
+++ b/src/styles/sections/banner.scss
@@ -1,48 +1,87 @@
 .banner {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
   width: 100%;
   height: 100vh;
+  padding-left: 55px;
+
+  @include max-laptop {
+    padding-left: 34px;
+  }
+
+  @include max-tablet-portrait {
+    height: 50vw;
+  }
 
   @include max-tablet {
-    height: 384px;
-  }
-
-  @include max-phone {
     height: auto;
+    padding-left: 0;
   }
 
-  .section__container {
+  &__cont {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 38.25%;
     height: 100%;
-  }
+    padding-top: 88px;
 
-  &__imgs {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 56.65%;
-    height: 100%;
-    background-color: var(--color-orange);
-
-    @include max-laptop {
-      width: 50%;
+    @include max-tablet-portrait {
+      justify-content: flex-end;
+      padding: 0 0 20px;
     }
 
     @include max-tablet {
+      order: 1;
+      text-align: center;
+      width: 100%;
+      padding: 0 20px;
+    }
+  }
+
+  &__title {
+    margin-bottom: 88px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    @include max-laptop {
+      margin-bottom: 38px;
+    }
+
+    @include max-tablet {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__btn {
+    margin-left: auto;
+
+    @include max-tablet-portrait {
+      margin: 0;
+    }
+  }
+
+  &__imgs {
+    position: relative;
+    width: 59%;
+    height: 100%;
+    background-color: var(--color-orange);
+
+    @include max-tablet-portrait {
       width: 48.77%;
     }
 
-    @include max-phone {
-      position: relative;
-      top: auto;
-      right: auto;
+    @include max-tablet {
       width: 100%;
-      height: 300px;
+      height: 0;
+      padding-bottom: 94%;
       margin-bottom: 20px;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
     }
   }
 
@@ -54,56 +93,6 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
-  }
-
-  &__block {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 470px;
-    height: 100%;
-    padding-top: 88px;
-
-    @include max-tablet {
-      width: 340px;
-      align-items: flex-end;
-      padding: 0 0 20px 0;
-    }
-
-    @include max-phone {
-      text-align: center;
-      width: 100%;
-      padding: 0;
-    }
-  }
-
-  &__cont {
-    position: relative;
-    width: 100%;
-  }
-
-  &__title {
-    margin-bottom: 88px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-
-    @include max-tablet {
-      margin-bottom: 38px;
-    }
-
-    @include max-phone {
-      margin-bottom: 20px;
-    }
-  }
-
-  &__btn {
-    margin-left: auto;
-
-    @include max-tablet {
-      margin: 0;
-    }
   }
 
   &__anchor {
@@ -123,7 +112,7 @@
     transform: rotate(-180deg);
     transition: color var(--time-3), padding-top var(--time-3);
 
-    @include max-tablet {
+    @include max-tablet-portrait {
       display: none;
     }
 
