--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -47,9 +47,14 @@
     }
 
     @include onDesktop {
+      transition: bottom $transition;
       padding: 45px 100px 30px;
       width: 370px;
     }
+  }
+
+  &:hover &__content {
+    bottom: -30px;
   }
 
   &__info {
