--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -17,10 +17,31 @@
     left: 55px;
   }
 
-  &--menu {
-    background: url("../images/icons/menu-icon.svg") no-repeat;
+  &__menu-line {
+    width: 18px;
+    height: 2px;
+    background-color: $black-color;
+    transition: width $transition;
   }
 
+  &__menu {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 3px;
+    padding: 3px;
+    box-sizing: border-box;
+
+    &:hover &-line:first-child {
+      width: 13px;
+    }
+
+    &:hover &-line:last-child {
+      width: 8px;
+    }
+  }
   &--close {
     background: url("../images/icons/close-icon.svg") no-repeat;
   }
