--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,11 @@
 .page {
   scroll-behavior: smooth;
 
+  @media (max-width: 370px) {
+    width: 370px;
+    overflow-x: hidden;
+  }
+
   &__body {
     position: relative;
     width: 100%;
