--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,6 @@
 .menu {
   color: #fff;
-  z-index: 2;
+  z-index: 101;
 
   @include onTablet {
     @include ff_ibm;
@@ -34,13 +34,12 @@
     }
   }
 
-  &::before {
-    z-index: 100;
-    content: "";
+  &__dark {
     position: fixed;
     top: 0;
+    z-index: -1;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #000;
     opacity: 0.5;
   }
