--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -39,7 +39,7 @@
 
   &__link {
     position: relative;
-    display: inline-block;
+    display: inline;
     width: 100px;
     font-weight: 500;
     color: inherit;
@@ -51,7 +51,7 @@
       bottom: -3px;
       display: block;
       height: 1px;
-      width: 50px;
+      width: 100%;
       background-color: $white-color;
       border-radius: 3px;
 
