add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap");
+
+@import "normalize";
 @import "utils";
-@import "fonts";
+@import "blocks";
 @import "typography";
 
-body {
-  background: $c-gray;
+.container {
+  width: 100%;
+  padding-inline: $mobile-container-inline-paddings;
+  margin: 0 auto;
+  max-width: 1440px;
+
+  @include onTablet {
+    padding-inline: $tablet-container-inline-paddings;
+  }
+
+  @include onDesktop {
+    padding-inline: $desktop-container-inline-paddings;
+  }
 }
