--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$dark-text-color: #0f0e08;
+$green-color: #1a5a4c;
+$red-color: #f14a27;
+$text-hover-color: #c9c8c8;
+
+$effectDuration: 300ms;
+
+$tablet-min-width: 576px;
+$desktop-min-width: 992px;
+
+$mobile-container-inline-paddings: 20px;
+$tablet-container-inline-paddings: 39px;
+$desktop-container-inline-paddings: 55px;
