--- a/src/styles/blocks/_subscription.scss
+++ b/src/styles/blocks/_subscription.scss
@@ -100,6 +100,7 @@
     background: $red-color;
     outline: none;
     border: none;
+    cursor: pointer;
 
     @include onTablet {
       width: 70px;
