change menu button to svg

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -4,44 +4,18 @@
   }
 
   &__menu {
+    background-image: url('../images/icons/menu-open.svg');
     position: absolute;
+    width: 24px;
+    height: 24px;
     z-index: 100;
     top: 27px;
-    display: flex;
-    flex-direction: column;
-    gap: 3px;
-    padding-inline: 3px;
-    padding-block: 6px;
     cursor: pointer;
     transition: all $effectDuration;
 
-    div {
-      transition: all $effectDuration;
-      width: 18px;
-      height: 2px;
-      background-color: $dark-text-color;
-    }
-
     &-active {
       transition: all $effectDuration;
-      top: 30px;
-      display: block;
-      div {
-        background-color: #fff;
-        transition: all $effectDuration;
-
-        &:nth-child(1) {
-          transform: translateY(1px) rotate(45deg);
-        }
-
-        &:nth-child(3) {
-          display: none;
-        }
-
-        &:nth-child(2) {
-          transform: translateY(-1px) rotate(-45deg);
-        }
-      }
+      background-image: url('../images/icons/menu-close.svg');
     }
 
     @include onTablet {
@@ -198,7 +172,7 @@
       font-size: 14px;
       font-weight: 700;
       transform: rotate(-90deg);
-      top: 60%;
+      top: 500px;
       left: 45px;
       text-decoration: none;
 
