--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,4 +7,5 @@
 @import "./blocks/container.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/button.scss";
-
+@import "./blocks/section.scss";
+@import "./blocks/events.scss";
