create all blocks except footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,5 +7,8 @@
 @import "./blocks/container.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/button.scss";
-@import "./blocks/section.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/section-title.scss";
 @import "./blocks/events.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/follow.scss";
