--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,6 +4,8 @@ $header-title-color: #000;
 $title-color: #0f0e08;
 $secodary-text-color: #4e4e4e;
 $event-link-color: #687480;
+$white-text-color: #fff;
+$follow-button-color: #F14A27;
 
 $title-font: "Montserrat", "Roboto", sans-serif;
 $secondary-font: "IBM Plex Sans", "Roboto", sans-serif;
@@ -13,3 +15,5 @@ $button-title-width: 201px;
 
 $container-padding-top: 40px;
 $container-padding-inline: 55px;
+
+$effectDuration: 0.3s;
