--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 104px;
+  }
 }
 
 .event {
@@ -39,7 +45,7 @@
       box-sizing: border-box;
       width: 570px;
       padding: 45px 100px 50px;
-      box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+      box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
       transform: translateY(-50%);
     }
 
@@ -73,6 +79,10 @@
     color: $main-green;
     font-weight: 700;
     line-height: 150%;
+
+    &--lecture {
+      margin: 0;
+    }
   }
 
   &__title {
