--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,6 +6,26 @@
 
   &:has(.page__menu:target) {
     overflow: hidden;
+    opacity: 0.5;
+    background: #18181A;
+  }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+
+    transition: all $effectDuration;
+    opacity: 0;
+    transform: translateY(-100%);
+    pointer-events: none;
+
+    &:target {
+      opacity: 1;
+      transform: translateX(0);
+      pointer-events: all;
+    }
   }
 
   &__body {
