mobile vers 70% complete

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/actions";
+@import "./blocks/btn";
+@import "./blocks/container";
+@import "./blocks/form";
+@import "./blocks/gallery";
+@import "./blocks/header";
+@import "./blocks/logo";
+@import "./blocks/normalize";
+@import "./blocks/page";
+@import "./blocks/schedule";
+@import "./blocks/section-title";
+@import "./blocks/slider";
+@import "./blocks/social-icons";
+@import "./blocks/subscribe";
+@import "./blocks/tickets";
+@import "./blocks/top-bar";
