--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,4 @@
-@import "utils/index";
+@import "./utils/index";
 
 * {
   margin: 0;
@@ -65,7 +65,7 @@ html {
   width: 100%;
   height: 100%;
   background-color: var(--color-white);
-  transition: opacity var(--time-6), visibility var(--time-6);
+  transition: opacity var(--transition-time), visibility var(--transition-time);
 }
 
 body {
@@ -219,7 +219,7 @@ h3,
     color: var(--color-black);
     text-transform: uppercase;
     padding: 0 66px;
-    transition: color var(--time-3);
+    transition: color var(--transition-time);
 
     &::before {
       position: absolute;
@@ -230,7 +230,7 @@ h3,
       width: 0;
       height: 100%;
       background-color: var(--color-green);
-      transition: width var(--time-6);
+      transition: width var(--transition-time);
     }
 
     @include max-tablet {
@@ -303,7 +303,7 @@ h3,
     border: none;
     background-color: var(--color-white);
     margin-right: 30px;
-    transition: color var(--time-3);
+    transition: color var(--transition-time);
 
     &::placeholder {
       color: var(--color-grey);
@@ -339,7 +339,7 @@ h3,
     height: 100%;
     background-color: var(--color-orange);
     border: none;
-    transition: background-color var(--time-3);
+    transition: background-color var(--transition-time);
 
     &:hover {
       background-color: rgba(241, 74, 39, 0.7);
@@ -363,4 +363,5 @@ h3,
   }
 }
 
-@import "sections/index";
+@import "./header";
+@import "./sections/index";
