--- a/src/styles/sections/_index.scss
+++ b/src/styles/sections/_index.scss
@@ -1,4 +1,4 @@
-@import "banner";
-@import "events";
-@import "content";
-@import "info";
+@import "./banner";
+@import "./events";
+@import "./content";
+@import "./info";
