--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -5,8 +5,7 @@
   --color-grey-2: #4e4e4e;
   --color-green: #1a5a4c;
   --color-orange: #f14a27;
-  --time-3: 0.3s;
-  --time-6: 0.6s;
+  --transition-time: 0.4s;
   --font-main: "IBM Plex Sans", sans-serif;
   --font-title: "Montserrat", sans-serif;
 }
