--- a/src/styles/sections/events.scss
+++ b/src/styles/sections/events.scss
@@ -64,7 +64,7 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
-    transition: transform var(--time-6);
+    transition: transform var(--transition-time);
   }
 
   &__imgs {
